updates the plop templates

--- a/plop-templates/component.hbs
+++ b/plop-templates/component.hbs
@@ -16,7 +16,7 @@ export const {{componentName}} = ({
     ...props
 }) => {
     return (
-        <div className={clsx(className, 'my-other-classes')}></div>
+        <div className={clsx('mainsail-{{kebabCase componentName}}', className)}>{children}</div>
     );
 };
 
