--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -18,6 +18,7 @@ button.mainsail-button {
     border-radius: $mainsail-button-border-radius;
     box-shadow: $mainsail-shadow-near;
     padding: 10px !important;
+    padding: 20px !important;
     cursor: pointer;
 
     /* Owl selector supplies space between elements */
