--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -41,6 +41,7 @@ $mainsail-shadow-active: 0px 0px 2px 1px rgba(0, 111, 186, 0.5);
 // Radius properties
 $mainsail-pill-radius: 20px;
 $mainsail-alert-radius: 4px;
+$mainsail-tip-radius: 4px;
 $mainsail-tab-radius: 8px;
 $mainsail-button-border-radius: 4px;
 $mainsail-button-border-radius-lg: 8px;
