--- a/plop-templates/component.hbs
+++ b/plop-templates/component.hbs
@@ -4,9 +4,10 @@ import { classify } from "utility/classify";
 
 import "./{{componentName}}.scss";
 
-export const ENUMS = {
-    // Add any prop enums here (see Icon.js for example)
-};
+/**
+ * @deprecated since version 7.0 - use directly attached ComponentName.<propNames>.value; e.g. Button.variants.secondary
+ */
+export const ENUMS = {};
 
 /**
  * {{componentDescription}}
