adds initial transition component support

--- a/plop-templates/component.hbs
+++ b/plop-templates/component.hbs
@@ -25,7 +25,7 @@ export const {{componentName}} = ({
 {{componentName}}.propTypes = {
     /** (Optional) click handler */
     onClick: PropTypes.func,
-    /** Style class to add to Icon wrapper */
+    /** Style class to add to component wrapper */
     className: PropTypes.string,
 };
 
