--- a/src/components/Transition/Transition.scss
+++ b/src/components/Transition/Transition.scss
@@ -5,7 +5,7 @@
 // Fade and Scale
 .ms-fade-scale-enter {
     opacity: 0;
-    transform: scale(0.8);
+    transform: scale(0.6);
 }
 .ms-fade-scale-enter-active {
     opacity: 1;
@@ -22,6 +22,29 @@
 }
 .ms-fade-scale-exit-done {
     opacity: 0;
+}
+
+// Fade and Slide Down
+.ms-fade-slide-down-enter {
+    opacity: 0;
+    transform: translateY(-30%);
+}
+.ms-fade-slide-down-enter-active {
+    opacity: 1;
+    transform: translateY(0%);
+    transition: opacity 300ms, transform 300ms;
+}
+.ms-fade-slide-down-exit {
+    opacity: 1;
+}
+.ms-fade-slide-down-exit-active {
+    opacity: 0;
+    transform: translateY(-30%);
+    transition: opacity 300ms, transform 300ms;
+}
+.ms-fade-slide-down-exit-done {
+    opacity: 0;
+    transform: translateY(0%);
 }
 
 // A Simple, Quick Fade
