--- a/src/components/Transition/Transition.scss
+++ b/src/components/Transition/Transition.scss
@@ -47,6 +47,52 @@
     transform: translateY(0%);
 }
 
+// Fade and Slide Right
+.ms-fade-slide-right-enter {
+    opacity: 0;
+    transform: translateX(-50%);
+}
+.ms-fade-slide-right-enter-active {
+    opacity: 1;
+    transform: translateX(0%);
+    transition: opacity 300ms, transform 300ms;
+}
+.ms-fade-slide-right-exit {
+    opacity: 1;
+}
+.ms-fade-slide-right-exit-active {
+    opacity: 0;
+    transform: translateX(-50%);
+    transition: opacity 300ms, transform 300ms;
+}
+.ms-fade-slide-right-exit-done {
+    opacity: 0;
+    transform: translateX(0%);
+}
+
+// Fade and Slide Left
+.ms-fade-slide-left-enter {
+    opacity: 0;
+    transform: translateX(50%);
+}
+.ms-fade-slide-left-enter-active {
+    opacity: 1;
+    transform: translateX(0%);
+    transition: opacity 300ms, transform 300ms;
+}
+.ms-fade-slide-left-exit {
+    opacity: 1;
+}
+.ms-fade-slide-left-exit-active {
+    opacity: 0;
+    transform: translateX(50%);
+    transition: opacity 300ms, transform 300ms;
+}
+.ms-fade-slide-left-exit-done {
+    opacity: 0;
+    transform: translateX(0%);
+}
+
 // A Simple, Quick Fade
 .ms-fade-enter {
     opacity: 0;
