--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -29,14 +29,26 @@
 
     .mainsail-modal-content {
         background-color: $mainsail-white;
-        min-width: 500px;
-        width: 500px;
+        min-height: 250px;
+        max-width: 80%;
+        max-height: 80%;
         box-shadow: $mainsail-shadow-far;
         border-radius: $mainsail-modal-radius;
         z-index: 1;
+        display: flex;
+        flex-direction: column;
+
+        @include mobile-size-down {
+            max-width: 100%;
+            min-width: 100%;
+        }
+        @include mobile-size-up {
+            min-width: 500px;
+        }
 
         .mainsail-modal-header {
             display: flex;
+            flex-grow: 0;
             flex-direction: row;
             align-items: center;
             justify-content: center;
@@ -70,7 +82,11 @@
         }
         .mainsail-modal-body {
             @include mainsail-body-text-regular;
+            flex-grow: 1;
             padding: 20px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            max-height: calc(80% - 150px); // 150 = head + foot
         }
         .mainsail-modal-footer {
             padding: 20px;
