--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -88,3 +88,13 @@
 .border {
     @include color-modifiers($attribute: "border-color");
 }
+
+.rounded {
+    border-radius: $mainsail-button-border-radius;
+}
+
+.content-blur {
+    filter: blur(3px);
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
