--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -8,6 +8,7 @@
 $mainsail-input-border-radius: 4px;
 $mainsail-input-border: $mainsail-neutral-4;
 $mainsail-input-border-active: $mainsail-blue-primary;
+$mainsail-input-border-error: $mainsail-red-middle;
 
 // Shadows
 $mainsail-shadow-sticky-bar: 0px 4px 22px -13px rgba(0, 52, 98, 0.2);
