--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -14,14 +14,15 @@ input[type="password"],
 input[type="number"] {
     &.mainsail-input {
         @include mainsail-body-text-regular;
-        padding-left: 7px;
-
+        padding: 7px;
+        color: $mainsail-neutral-2;
         height: 36px;
         border-radius: $mainsail-input-border-radius;
         border: 1px solid $mainsail-input-border;
+        background-color: $mainsail-white;
 
         &::placeholder {
-            color: $mainsail-neutral-2;
+            color: $mainsail-neutral-3;
         }
 
         &:active,
@@ -32,10 +33,8 @@ input[type="number"] {
             box-shadow: $mainsail-shadow-near;
         }
 
-        &:disabled {
-            cursor: not-allowed;
-            opacity: 0.5;
-            background: $mainsail-neutral-6;
-        }
+        @include disabled;
+
+        @include readonly;
     }
 }
