adds TextArea component

--- a/src/components/core/index.scss
+++ b/src/components/core/index.scss
@@ -6,6 +6,7 @@
 @import "../../styles/Text.scss";
 
 // SASS Global Import for plopjs
+@import "../Textarea/Textarea.scss";
 @import "../FormLabel/FormLabel.scss";
 @import "../FormControl/FormControl.scss";
 @import "../Input/Input.scss";
