removes ENUMS support from plop
- new components don't need this

--- a/plop-templates/component.hbs
+++ b/plop-templates/component.hbs
@@ -5,9 +5,12 @@ import { classify } from "utility/classify";
 import "./{{componentName}}.scss";
 
 /**
- * @deprecated since version 7.0 - use directly attached ComponentName.<propNames>.value; e.g. Button.variants.secondary
- */
-export const ENUMS = {};
+* Define and export enumerable prop values for use (then attach to component below)
+* e.g. export const colors = {
+*    color1: "color1"
+* }
+*/
+
 
 /**
  * {{componentDescription}}
