separates out helpText into its own sub component

--- a/src/components/core/index.scss
+++ b/src/components/core/index.scss
@@ -6,6 +6,7 @@
 @import "../../styles/Text.scss";
 
 // SASS Global Import for plopjs
+@import "../FormHelpText/FormHelpText.scss";
 @import "../AutoGrid/AutoGrid.scss";
 @import "../Textarea/Textarea.scss";
 @import "../FormLabel/FormLabel.scss";
