fix a minor css issue

--- a/src/components/Transition/Transition.scss
+++ b/src/components/Transition/Transition.scss
@@ -8,7 +8,7 @@
     transform: scale(0.6);
 }
 .ms-fade-scale-enter-active,
-.ms-fade-appear-active,
+.ms-fade-scale-appear-active,
 .ms-fade-scale-appear-done {
     opacity: 1;
     transform: scale(1);
