fixes modal style getting clobberd by applying a base style to h2

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -61,6 +61,11 @@
                 display: flex;
                 justify-content: center;
 
+                h2 {
+                    @include h2;
+                    margin: 0;
+                }
+
                 &:first-child {
                     flex: 1;
                     justify-content: flex-start;
