--- a/src/components/core/index.scss
+++ b/src/components/core/index.scss
@@ -6,6 +6,7 @@
 @import "../../styles/Text.scss";
 
 // SASS Global Import for plopjs
+@import "../ListGroup/ListGroup.scss";
 @import "../FormInputOptions/FormInputOptions.scss";
 @import "../FormHelpText/FormHelpText.scss";
 @import "../AutoGrid/AutoGrid.scss";
