--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -19,7 +19,7 @@ button.mainsail-button {
     box-shadow: $mainsail-shadow-near;
     padding: 10px !important;
     cursor: pointer;
-    min-width: 0;
+    min-width: auto;
 
     /* Owl selector supplies space between elements */
     > * + * {
