adds initial flex grid component

--- a/src/components/core/index.scss
+++ b/src/components/core/index.scss
@@ -8,6 +8,7 @@
 // SASS Global Import for plopjs
 @import "../ListGroup/ListGroup.scss";
 @import "../FormInputOptions/FormInputOptions.scss";
+@import "../Flex/Flex.scss";
 @import "../FormHelpText/FormHelpText.scss";
 @import "../AutoGrid/AutoGrid.scss";
 @import "../Textarea/Textarea.scss";
