--- a/src/components/Flex/Flex.scss
+++ b/src/components/Flex/Flex.scss
@@ -6,6 +6,11 @@
 .mainsail-flex {
     display: flex;
 
+    .flex-gap {
+        flex: 1 1 0%;
+        place-self: stretch;
+    }
+
     &.row {
         display: flex;
         flex-flow: row wrap;
@@ -52,18 +57,6 @@
 
     &.align-flex-end {
         align-items: flex-end;
-    }
-
-    &.column.gutters {
-        flex: 1 1 0px;
-        box-sizing: border-box;
-        padding-left: 0.9375rem;
-        padding-right: 0.9375rem;
-    }
-
-    &.column.gutters > .row {
-        margin-left: -0.9375rem;
-        margin-right: -0.9375rem;
     }
 
     &.sm-1 {
@@ -126,7 +119,7 @@
         max-width: 100%;
     }
 
-    @media screen and (min-width: 40em) {
+    @media screen and (min-width: 576px) {
         &.md-1 {
             flex: 0 0 8.33333%;
             max-width: 8.33333%;
@@ -188,7 +181,7 @@
         }
     }
 
-    @media screen and (min-width: 64em) {
+    @media screen and (min-width: 992px) {
         &.lg-1 {
             flex: 0 0 8.33333%;
             max-width: 8.33333%;
