--- a/src/components/AutoGrid/AutoGrid.scss
+++ b/src/components/AutoGrid/AutoGrid.scss
@@ -13,9 +13,17 @@
         grid-auto-flow: row;
     }
 
-    @include grid-templates;
-
     &.gap {
         @include spacing-modifiers($attribute: "gap");
+    }
+
+    @include grid-templates;
+
+    .column-auto {
+        grid-column: auto;
+    }
+
+    .row-auto {
+        grid-row: auto;
     }
 }
