adds resets for box-sizing on components

--- a/src/components/Badge/Badge.scss
+++ b/src/components/Badge/Badge.scss
@@ -8,6 +8,7 @@
     font-size: 0.75em;
     padding: 4px;
     border-radius: 9999px;
+    box-sizing: border-box;
 
     button {
         background-color: transparent;
