--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -7,6 +7,7 @@
     margin-right: 0;
     min-width: auto;
     width: auto;
+    box-sizing: border-box;
 
     select.ms-select {
         @include mainsail-body-text-regular;
