--- a/src/components/Radio/Radio.scss
+++ b/src/components/Radio/Radio.scss
@@ -6,6 +6,7 @@
     @include mainsail-body-text-regular();
     margin: 0;
     color: $mainsail-neutral-2;
+    box-sizing: border-box;
 
     .mainsail-radio__input-wrapper {
         display: flex;
@@ -150,6 +151,7 @@
 .mainsail-radiogroup {
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 
     &.error {
         label.radiogroup-label {
