--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -13,6 +13,7 @@
     max-width: 170px;
     background-color: $mainsail-blue-dark;
     color: $mainsail-blue-light;
+    box-sizing: border-box;
 
     .tip-icon {
         cursor: pointer;
