fixes alignment of checkbox text when using inside an inputOption

--- a/src/components/FormInputOptions/FormInputOptions.scss
+++ b/src/components/FormInputOptions/FormInputOptions.scss
@@ -22,7 +22,7 @@
         }
     }
 
-    .mainsail-checkbox__label-text {
+    .mainsail-checkbox .mainsail-checkbox__label-text {
         @include mainsail-body-text-small;
         color: $mainsail-neutral-1;
         margin-top: 0;
