--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -75,7 +75,7 @@
 }
 
 .box-shadow-sticky {
-    box-shadow: $mainsail-shadow-sticky-bar;
+    box-shadow: $mainsail-shadow-sticky;
 }
 /* End Shadows */
 
