--- a/src/styles/Variables.scss
+++ b/src/styles/Variables.scss
@@ -15,7 +15,7 @@ $mainsail-input-border-active: $mainsail-blue-primary;
 $mainsail-input-border-error: $mainsail-red-middle;
 
 // Shadows
-$mainsail-shadow-sticky-bar: 0px 4px 22px -13px rgba(0, 52, 98, 0.2);
+$mainsail-shadow-sticky: 0px 2px 4px rgba(0, 52, 98, 0.1);
 $mainsail-shadow-far: 0px 2px 32px -12px rgba(0, 52, 98, 0.25);
 $mainsail-shadow-near: 0px 2px 8px -2px rgba(0, 52, 98, 0.3);
 $mainsail-shadow-active: 0px 0px 2px 1px rgba(0, 111, 186, 0.5);
